crates/plotnik-tests/tests/04-emit/types/definitions/error_captured_ref_to_captureless_def.txt
A = (identifier)

Q = (program
  (expression_statement (A) @x)
)
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:4:25
  |
1 | A = (identifier)
  |     ------------ defined here
...
4 |   (expression_statement (A) @x)
  |                         ^^^
